[package]
edition = "2024"
name = "opera-proxy-rs"
version = "0.1.0"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
clap = {version = "4.6.1", features = ["derive"]}
digest_auth = "0.3.1"
getrandom = "0.4.2"
http = "1.4.1"
http-body-util = "0.1.3"
humantime = "2.3.0"
hyper = {version = "1.10.1", features = ["full"]}
hyper-util = {version = "0.1.20", features = ["full"]}
rand = "0.10.1"
reqwest = {version = "0.13.4", features = ["json", "cookies", "rustls"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
sha1 = "0.11.0"
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
wreq = "6.0.0-rc.28"
wreq-util = "3.0.0-rc.11"
